# smartaction-planner

./: .gitignore  AGENTS.md  Cargo.toml  README.md  middleware.ts  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  scraper-health.yml
api/: quote.rs  quote_stream.rs  shared.rs
app/: globals.css  layout.tsx  page.tsx
app/api/auth/callback/: route.ts
app/api/health/: route.ts
app/api/me-history/: route.ts
app/api/project-plan/: route.ts
app/api/run-quote/: route.ts
app/api/track-click/: route.ts
app/app/: page.tsx
app/app/history/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
components/: CSVUploader.tsx  QuoteResults.tsx  RuntimeTimer.tsx  SearchInput.tsx
config/: site-plans.json
lib/: ai-parser.ts  env.ts  project-blueprint.ts  site-plan.ts  supabase-server.ts  supabase-service.ts  types.ts  vendor-links.ts
src/: shared.rs
supabase/migrations/: 202602180001_init.sql  202602180002_site_plans.sql  202602180003_site_catalog.sql  202602180004_tune_site_defaults.sql  202602180005_unknown_plan_tuning.sql  202602180006_site_learning.sql  202602180007_intent_site_stats.sql  202602180008_site_discoveries.sql  202602180009_google_shopping_seed.sql  202602180010_site_discoveries_cluster.sql
tests/: site-plan.test.ts
