[package]
name = "supplyflare-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http-body-util = "0.1"
hyper = "1"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
vercel_runtime = "2"

[[bin]]
name = "quote"
path = "api/quote.rs"

[[bin]]
name = "quote_stream"
path = "api/quote_stream.rs"
